[gd_scene load_steps=8 format=3 uid="uid://bae7aifhormuj"]

[ext_resource type="Script" path="res://scripts/quick_time_events/qteMashing.gd" id="1_8qkyh"]
[ext_resource type="AudioStream" uid="uid://cspa7lxtp13av" path="res://audio/sounds/542003__rob_marion__gasp_lock-and-load.ogg" id="2_mukpm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4t4ro"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i01q"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_k78bc"]
resource_name = "Point"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.141372, 0.139626, -0.139626, 0.0]
}

[sub_resource type="Animation" id="Animation_htf3m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lj6m1"]
_data = {
"Point": SubResource("Animation_k78bc"),
"RESET": SubResource("Animation_htf3m")
}

[node name="QTE" type="Node2D"]
z_index = 5
script = ExtResource("1_8qkyh")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_mukpm")

[node name="MashBar" type="ProgressBar" parent="."]
offset_left = -47.0
offset_top = -20.0
offset_right = 48.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_4t4ro")
show_percentage = false

[node name="TimeBar" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = -32.0
offset_right = -47.0
offset_bottom = 32.0
theme_override_styles/background = SubResource("StyleBoxFlat_0i01q")
fill_mode = 3
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lj6m1")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
